issue #285: Trụ sở chuyển trang