@@ -2,6 +2,7 @@ package com.example.suco.controller.vanhanh.truso;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -11,7 +12,6 @@ import com.example.suco.repository.sos.tinhieu.TinHieuSOSRepository;
 import com.example.suco.dto.sos.tinhieu.truso.TruSoSOSDetailResponseDTO;
 import com.example.suco.mapper.TinHieuMapper;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/truso")
@@ -23,8 +23,16 @@ public class PageSOSController {
     @Autowired
     private TinHieuMapper tinHieuMapper; 
 
+    // PHÒNG THỦ: Kiểm tra bảo mật token tránh lỗi 500 trắng trang
     private Long getTruSoId(Jwt jwt) {
-        return Long.parseLong(jwt.getSubject());
+        if (jwt == null || jwt.getSubject() == null) {
+            throw new BadCredentialsException("Token không hợp lệ hoặc đã hết hạn");
+        }
+        try {
+            return Long.parseLong(jwt.getSubject());
+        } catch (NumberFormatException e) {
+            throw new BadCredentialsException("Mã trụ sở sai định dạng số");
+        }
     }
 
     @GetMapping("/api/sos/da-tiep-nhan")
@@ -36,33 +44,30 @@ public class PageSOSController {
 
     @GetMapping("/api/sos/dang-di-chuyen")
     public List<TruSoSOSDetailResponseDTO> getSosDangDiChuyen(@AuthenticationPrincipal Jwt jwt) {
-        List<TinHieuSOS> movingEntities = tinHieuSOSRepository.findMovingByTruSo(getTruSoId(jwt));
-        return movingEntities.stream()
+        return tinHieuSOSRepository.findMovingByTruSo(getTruSoId(jwt)).stream()
                 .map(tinHieuMapper::toTruSoDetailDto)
-                .collect(Collectors.toList());
+                .toList(); // Rút gọn gọn gàng hơn
     }
 
     @GetMapping("/api/sos/dang-xu-ly")
     public List<TruSoSOSDetailResponseDTO> getSosDangXuLy(@AuthenticationPrincipal Jwt jwt) {
-        List<TinHieuSOS> sosEntities = tinHieuSOSRepository.findActiveByTruSo(getTruSoId(jwt));
-        return sosEntities.stream()
+        return tinHieuSOSRepository.findActiveByTruSo(getTruSoId(jwt)).stream()
                 .map(tinHieuMapper::toTruSoDetailDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @GetMapping("/api/sos/lich-su")
-    public List<TruSoSOSDetailResponseDTO> getSosLichSu(@AuthenticationPrincipal Jwt jwt) {
-        List<TinHieuSOS> lichSuEntities = tinHieuSOSRepository.findHistoryByTruSo(getTruSoId(jwt));
-        return lichSuEntities.stream()
+    // ĐÃ SỬA: Đổi từ /api/sos/lich-su thành /api/sos/da-xu-ly để khớp cấu trúc bên Sự cố
+    @GetMapping("/api/sos/da-xu-ly")
+    public List<TruSoSOSDetailResponseDTO> getSosDaXuLy(@AuthenticationPrincipal Jwt jwt) {
+        return tinHieuSOSRepository.findHistoryByTruSo(getTruSoId(jwt)).stream()
                 .map(tinHieuMapper::toTruSoDetailDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/api/sos/huy-xu-ly")
     public List<TruSoSOSDetailResponseDTO> getSosHuyXuLy(@AuthenticationPrincipal Jwt jwt) {
-        List<TinHieuSOS> huyXuLyEntities = tinHieuSOSRepository.findCancelByTruSo(getTruSoId(jwt));
-        return huyXuLyEntities.stream()
+        return tinHieuSOSRepository.findCancelByTruSo(getTruSoId(jwt)).stream()
                 .map(tinHieuMapper::toTruSoDetailDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
